<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <com.cn.graduationclient.xingcmyAdapter.HoldTitle
            android:id="@+id/information_hold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="个人信息"
            app:type="10"/>
        <ImageView
            android:id="@+id/information_my_head"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@mipmap/xing"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/my_id"
            app:number="10"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/name"
            app:number="10"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/signature"
            app:number="10"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/sex"
            app:number="10"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/birthday"
            app:number="10"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_profession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/profession"
            app:number="10"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/email"
            app:number="10"/>
        <com.cn.graduationclient.xingcmyAdapter.Lable
            android:id="@+id/information_lable_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lable="@string/city"
            app:number="10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow>
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/alter_information"
                    android:textSize="16sp"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/alter_information"/>
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="@string/send_message"
                    android:background="@color/colorPrimaryDark"
                    android:id="@+id/send_message"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>



</LinearLayout>
