<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="已阅读并同意"
            android:textColor="#000"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tv_xieyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xieyi"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textColor="#000"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tv_yinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zhengce"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            />
    </LinearLayout>
</LinearLayout>
