<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:divider="@drawable/common_divider_large_horizontal"
        android:showDividers="beginning|middle|end">
        <RadioButton
            android:id="@+id/radio_message_homepage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/message"
            android:button="@drawable/ic_message"
            android:onClick="onclickMessage"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_music_homepage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/music"
            android:button="@drawable/ic_music"
            android:onClick="onclickMusic"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/radio_my_homepage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/my"
            android:button="@drawable/ic_my"
            android:onClick="onclickMy"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/homepage_body"/>
    </LinearLayout>

</LinearLayout>
